# python-model

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/adapters/database/: models.py
app/api/dependencies/: database.py
