[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sample"
version = "0.0.1"
maintainers = [
  {name = "John Doe", email = "john.doe@example.com"}
]
keywords = ["sample"]
description = "Sample project for Python"
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
]

[project.optional-dependencies]
linting = [
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.2.0",
    "pylint==2.17.3",
    "ruff==0.0.263"
]
tests = [
]
docs = [
]
