[project]
name = "sample"
version = "0.0.1"
maintainers = [
  {name = "John Doe", email = "john.doe@example.com"}
]
keywords = ["sample"]
description = "Sample project for Python"
readme = "README.md"
requires-python = ">=3.13.0"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.2.0",
    "pylint==2.17.3",
    "ruff==0.0.263"
]
